k8s/ms4.langstats-indonesia/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: langstats-ingress
  namespace: langstats-indonesia
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
spec:
  ingressClassName: nginx
  rules:
    - host: langstats.anla.works
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: langstats-service
                port:
                  number: 80
